# ChatWithDatabase

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: app.py
