[project]
name = "chatwithdatabase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "dotenv>=0.9.9",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langchain-text-splitters>=1.0.0",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.5.0",
    "pymupdf>=1.26.6",
    "pypdf>=6.4.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
]
